thêm phần đăng ký tài khoản

--- a/node/src/views/clients/patirals/header.pug
+++ b/node/src/views/clients/patirals/header.pug
@@ -109,9 +109,9 @@ header.header
               | Tài khoản
             ul.dropdown-menu.dropdown-menu-end.shadow-lg.border-0.rounded-3.mt-2
               li
-                a.dropdown-item.py-2.px-3(href="/profile")
+                a.dropdown-item.py-2.px-3(href="/user/register")
                   i.fas.fa-user.me-2.text-primary
-                  | Thông tin cá nhân
+                  | Đăng ký
               li
                 a.dropdown-item.py-2.px-3(href="/orders")
                   i.fas.fa-shopping-bag.me-2.text-success
